--- a/AppMisFlores/templates/appMisFlores/plantas/listarPlantas.html
+++ b/AppMisFlores/templates/appMisFlores/plantas/listarPlantas.html
@@ -2,6 +2,13 @@
 {% load staticfiles %}
 
 {% block content %}
+    <div class="container"> 
+        <form method="get">
+        {{ filter.form.as_p }}
+        <button type="submit">Search</button>
+        </form>
+    </div>
+    
     {% for planta in filter.qs %}
         {% if planta.imagen %}
         <!-- Proyecto -->
